# RLSwimmerVer3

./: .gitignore  .gitmodules  a_v2.json  b_v2.json  check.py  check2.py  make_characteristics.py  manual-test.py  manual-test2.py  phase_test.py  phase_test2.py  random_test.py  requirements.txt  test.py  test_prev.py  train.py  train_ppo.py  train_sac.py
rl/learning_curve/: plot_curve.py
rl_wrong/learning_curve/: plot_curve_new.py
sim/: arm_force.py  arm_lengths.py  state_transition.py
sim/analysis/: fig1.py  fig2.py  figure_1.py
sim/result/: type10_can_move.csv  type10_period1_maxlength1.5.csv  type10_period1_maxlength1.9.csv  type10_radius0.1_interval1_maxlength1.5_epsilon0.csv  type10_radius0.1_period1_maxlength1.5.csv  type202_radius0.1_interval0.3_maxlength1.3_withoutEnergy.csv  type202_radius0.1_interval0.3_maxlength1.3_withoutEnergy_learned.csv  type202_radius0.1_interval0.3_maxlength1.3_withoutEnergy_manual.csv  type202_radius0.1_interval0.7_maxlength1.7_withoutEnergy.csv  type202_radius0.1_interval0.9_maxlength1.9_withoutEnergy.csv  (+70 more)
skeleton_swimmer_env/: __init__.py  debug.py  sample.py  skeleton_swimmer.py  skeleton_swimmer_env.py
skeleton_swimmer_env/skeleton_swimmer/: CMakeLists.txt  pybind_wrapper.cpp  wrapper.cpp
skeleton_swimmer_env/skeleton_swimmer/include/: params.hpp  skeleton_swimmer.cpp  skeleton_swimmer.hpp
skeleton_swimmer_env/skeleton_swimmer/src/: CMakeLists.txt  cmakelists.txt  main.cpp  skeleton_swimmer.cpp
tmp/: force_based_model.py  velocity_based_model.py
tmp_record/: period0.2_length1.5.csv  period1.0_length1.9
(+1380 files in other folders)
